Correcion guion de ambas paginas

--- a/destino.html
+++ b/destino.html
@@ -75,16 +75,65 @@ Evita un tono comercial agresivo.
 
     <section>
       <h2>Guió del vídeo</h2>
+
       <p><strong>Títol:</strong> “Si te sientes así, necesitas escapar”</p>
       <p><strong>Durada:</strong> 35–45 segons</p>
       <p><strong>Format:</strong> Identificació emocional + alleujament</p>
+      <p><strong>To:</strong> Proper, honest i inspirador</p>
 
       <p>
-        El vídeo comença mostrant situacions quotidianes d’estrès i rutina,
-        per després fer un contrast amb imatges de natura i tranquil·litat.
-        El missatge se centra en la necessitat de parar, respirar i
-        reconnectar amb un mateix mitjançant una escapada personalitzada.
+        El vídeo utilitza una narrativa emocional per connectar amb persones
+        que se senten cansades de la rutina diària. A través del contrast
+        entre situacions d’estrès i imatges de calma i natura, es transmet
+        la idea de viatjar com una necessitat emocional, no com un luxe.
       </p>
+
+      <h3>Guió utilitzat</h3>
+      <pre>
+🎬 GUION REEL – “SI TE SIENTES ASÍ, NECESITAS ESCAPAR”
+
+Duración: 35–45 segundos
+Formato: Identificación emocional + alivio
+Tono: Cercano, honesto, inspirador
+
+ESCENA 1 – IMPACTO VISUAL (0–4 s)
+Pantalla oscura, ruido de notificaciones y reloj avanzando.
+Texto en pantalla:
+“Te levantas cansado…”
+“Miras el reloj todo el día…”
+“Sientes que necesitas parar.”
+Voz: “Si últimamente te sientes así…”
+
+ESCENA 2 – IDENTIFICACIÓN (5–12 s)
+Rutina diaria: tráfico, ordenador, móvil, casa.
+Texto en pantalla:
+Rutina · Estrés · Siempre con prisa
+Voz: “No es que no te guste viajar… es que no has parado.”
+
+ESCENA 3 – QUIEBRE EMOCIONAL (13–20 s)
+Paisajes abiertos, luz natural y silencio.
+Texto en pantalla:
+Respirar · Desconectar · Disfrutar
+Voz: “A veces no necesitas vacaciones… necesitas escapar.”
+
+ESCENA 4 – PROPUESTA DE VALOR (21–32 s)
+Personas disfrutando sin posar: caminar, comer, mirar.
+Voz: “Creamos escapadas pensadas para cómo quieres sentirte,
+no para seguir un itinerario.”
+Texto en pantalla:
+Viajes hechos a tu ritmo · Sin prisas · Sin estrés
+
+ESCENA 5 – DIFERENCIAL (33–40 s)
+Detalles: café, atardecer, manos, maleta.
+Voz: “Tú nos dices cuándo quieres parar.
+Nosotros diseñamos el lugar perfecto.”
+
+ESCENA 6 – CTA SUAVE (41–45 s)
+Plano final inspirador.
+Texto en pantalla:
+Escríbenos “ESCAPAR”
+Tu descanso empieza aquí
+  </pre>
     </section>
 
   </main>
