--- a/jocs.html
+++ b/jocs.html
@@ -9,84 +9,113 @@
 
 <body>
 
-<header>
-  <h1>Botiga de Jocs de Taula</h1>
-  <p>Novetats i clàssics per jugar en família o amb amics</p>
-</header>
+  <header>
+    <h1>Botiga de Jocs de Taula</h1>
+    <p>Novetats i clàssics per jugar en família o amb amics</p>
+  </header>
 
-<nav>
-  <a href="index.html">Inici</a>
-  <a href="jocs.html">Botiga de Jocs de Taula</a>
-  <a href="destino.html">Destino Calma</a>
-</nav>
+  <nav>
+    <a href="index.html">Inici</a>
+    <a href="jocs.html">Botiga de Jocs de Taula</a>
+    <a href="destino.html">Destino Calma</a>
+  </nav>
 
-<main>
+  <main>
 
-<section>
-  <h2>Descripció del client</h2>
-  <p>
-    Botiga especialitzada en jocs de taula que vol donar visibilitat
-    tant a les novetats com als jocs clàssics mitjançant vídeos curts
-    i dinàmics.
-  </p>
-</section>
+    <section>
+      <h2>Descripció del client</h2>
+      <p>
+        Botiga especialitzada en jocs de taula que vol donar visibilitat
+        tant a les novetats com als jocs clàssics mitjançant vídeos curts
+        i dinàmics.
+      </p>
+    </section>
 
-<section>
-  <h2>Vídeo promocional</h2>
-  <video controls>
-    <source src="videos/jocs.mp4" type="video/mp4">
-  </video>
-</section>
+    <section>
+      <h2>Vídeo promocional</h2>
+      <video controls>
+        <source src="videos/jocs.mp4" type="video/mp4">
+      </video>
+    </section>
 
-<section>
-  <h2>Fitxa tècnica</h2>
-  <ul>
-    <li><strong>Empresa:</strong> Botiga de Jocs de Taula</li>
-    <li><strong>Audiència:</strong> Famílies, joves i aficionats als jocs</li>
-    <li><strong>Missatge:</strong> Jocs divertits per a tots els nivells</li>
-    <li><strong>Objectiu:</strong> Atraure clients a la botiga física</li>
-    <li><strong>Plataforma:</strong> Instagram i YouTube Shorts</li>
-    <li><strong>Durada:</strong> 25–30 segons</li>
-    <li><strong>Disseny:</strong> Ritme dinàmic, colors vius, imatges de partides</li>
-    <li><strong>IAs utilitzades:</strong> ChatGPT i Pictory.ai</li>
-  </ul>
-</section>
+    <section>
+      <h2>Fitxa tècnica</h2>
+      <ul>
+        <li><strong>Empresa:</strong> Botiga de Jocs de Taula</li>
+        <li><strong>Audiència:</strong> Famílies, joves i aficionats als jocs</li>
+        <li><strong>Missatge:</strong> Jocs divertits per a tots els nivells</li>
+        <li><strong>Objectiu:</strong> Atraure clients a la botiga física</li>
+        <li><strong>Plataforma:</strong> Instagram i YouTube Shorts</li>
+        <li><strong>Durada:</strong> 25–30 segons</li>
+        <li><strong>Disseny:</strong> Ritme dinàmic, colors vius, imatges de partides</li>
+        <li><strong>IAs utilitzades:</strong> ChatGPT i Pictory.ai</li>
+      </ul>
+    </section>
 
-<section>
-  <h2>Procés de creació</h2>
-  <p>
-    Es va definir el públic objectiu i el tipus de contingut desitjat.
-    Posteriorment es va utilitzar ChatGPT per generar un guió breu,
-    clar i variat. Finalment, el guió es va introduir a Pictory.ai
-    per crear el vídeo promocional.
-  </p>
-</section>
+    <section>
+      <h2>Procés de creació</h2>
+      <p>
+        Es va definir el públic objectiu i el tipus de contingut desitjat.
+        Posteriorment es va utilitzar ChatGPT per generar un guió breu,
+        clar i variat. Finalment, el guió es va introduir a Pictory.ai
+        per crear el vídeo promocional.
+      </p>
+    </section>
 
-<section>
-  <h2>Prompt utilitzat</h2>
-  <pre>
+    <section>
+      <h2>Prompt utilitzat</h2>
+      <pre>
 Botiga de jocs de taula: Una botiga especialitzada en jocs de taula
 vol destacar les novetats i clàssics disponibles.
 Els vídeos podrien incloure tutorials breus o partides ràpides
 orientats a YouTube Shorts i Instagram.
   </pre>
-</section>
+    </section>
 
-<section>
-  <h2>Guió del vídeo</h2>
-  <p>
-    El vídeo presenta diferents jocs de taula mitjançant imatges
-    dinàmiques i textos breus. Es destaquen tant les novetats
-    com els clàssics, mostrant partides ràpides i moments de diversió
-    per transmetre un ambient proper i familiar.
-  </p>
-</section>
+    <section>
+      <h2>Guió del vídeo</h2>
 
-</main>
+      <p><strong>Durada:</strong> 25–30 segons</p>
+      <p><strong>Format:</strong> Promocional dinàmic</p>
+      <p><strong>To:</strong> Proper, divertit i entusiasta</p>
 
-<footer>
-  <p>Projecte Promoció Digital amb IA</p>
-</footer>
+      <p>
+        El vídeo presenta diferents jocs de taula mitjançant imatges dinàmiques
+        i textos curts que destaquen tant les novetats com els clàssics.
+        Es busca transmetre diversió, proximitat i ganes de jugar,
+        mostrant que hi ha opcions per a totes les edats i nivells.
+      </p>
+
+      <h3>Guió utilitzat</h3>
+      <pre>
+¿Buscas un juego de mesa para disfrutar con amigos o en familia?
+
+En nuestra botiga de jocs de taula encontrarás
+novedades que enganchan
+y clásicos que nunca fallan.
+
+Estrategia.
+Diversión.
+Risas aseguradas.
+
+Aprende a jugar en minutos
+o vive partidas rápidas con otros jugadores.
+
+Tenemos juegos para todos los niveles
+y todas las edades.
+
+Ven a descubrir tu próximo juego favorito.
+Te esperamos en la tienda.
+  </pre>
+    </section>
+
+
+  </main>
+
+  <footer>
+    <p>Projecte Promoció Digital amb IA</p>
+  </footer>
 
 </body>
+
 </html>
